# irisflow-mvp

./: .gitignore  =12.0  README.md  evaluate_log.txt  irisflow_gaze_model.pkl  pyproject.toml  requirements.txt  start_demo.bat
docs/: ARCHITECTURE.md  DATASETS.md  DECISIONS.md  ML_ARCHITECTURE.md  ROADMAP.md  TRAINING_SETUP.md  model_comparison.md
frontend/: index.html  tailwind.config.js  test_onboarding.mjs  vite.config.js
frontend/electron/: main.cjs  preload.cjs
frontend/src/: App.jsx
frontend/src/api/: http.js
frontend/src/components/: EmergencyButton.jsx  GazeButton.jsx  GazeCursor.jsx  SideNav.jsx  TopBar.jsx
frontend/src/config/: api.js
frontend/src/context/: GazeSocketContext.jsx
irisflow/accessibility/: dwell.py
irisflow/api/: __init__.py  events.py  main.py  websocket.py
irisflow/app/: bootstrap.py  main.py
irisflow/core/: app_state.py  config.py  events.py  logger.py  paths.py
irisflow/profiles/: profile.py  profile_store.py
irisflow/speech/: tts.py
irisflow/storage/: phrases_store.py
irisflow/tracking/: base.py  factory.py  filter.py  mock_engine.py  service.py  types.py
irisflow/ui/: main_window.py  theme.py
tests/: conftest.py  test_dwell_controller.py  test_engine_factory.py  test_gaze_point.py  test_irisgazenet_model_validation.py  test_irisgazenet_training_diagnostics.py  test_phrases_store.py  test_profile_store.py
training/: README_training.md  augmentation.py  build_pose_cache.py  dataset.py  download_mpiigaze.py  evaluate.py  evaluate_accuracy.py  model.py  pretrain.py  requirements_training.txt
(+32 files in other folders)
