[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "irisflow"
version = "0.1.0"
description = "Plataforma assistiva de comunicação por rastreamento ocular"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6.0",
    "pyttsx3>=2.90",
]

[project.scripts]
irisflow = "irisflow.app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["irisflow*"]
