[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "irisflow"
version = "0.1.0"
description = "Plataforma assistiva de comunicação por rastreamento ocular"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6.0",
    "pyttsx3>=2.90",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "websockets>=12.0",
    "mediapipe==0.10.14",
    "protobuf==4.25.9",
    "opencv-python==4.10.0.84",
    "numpy==1.26.4",
    "scikit-learn==1.7.2",
    "torch==2.3.1",
    "torchvision==0.18.1",
]

[project.scripts]
irisflow = "irisflow.app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["irisflow*"]
